# algorithms

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
lib/cpp-console-table/: CppConsoleTable.h
lib/cxxopts/: cxxopts.h
lib/doctest/: doctest.h
src/: CMakeLists.txt
src/b_tree/: BTree.cpp  BTree.h  CMakeLists.txt  main.cpp
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
src/dijkstra_algorithm/: CMakeLists.txt  ConsoleTable.cpp  ConsoleTable.h  EWorkingMode.h  FileReader.cpp  FileReader.h  PathReader.cpp  PathReader.h  Reader.h  Table.cpp  Table.h  dijkstra_algorithm.cpp  dijkstra_algorithm.h  main.cpp
src/queue_and_stack/: CMakeLists.txt  main.cpp  queue.cpp  queue.h  stack.cpp  stack.h
src/stitched_wood/: CMakeLists.txt  main.cpp  stitched_wood.cpp  stitched_wood.h
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt  calculator.spec.cpp
test/queue_and_stack/: CMakeLists.txt  queue_and_stack.spec.cpp
test/utils/: utils.cpp  utils.h
